--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
