--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "format": "npx prettier --write \"**/*.{js,jsx,json,ts,tsx}\""
   },
   "dependencies": {
+    "native-base": "^3.4.9",
     "react": "18.0.0",
-    "react-native": "0.69.2"
+    "react-native": "0.69.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-svg": "^12.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
