--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "paths": {
       "@src": ["src"],
       "@components": ["src/components"],
+      "@screens": ["src/screens"]
     }
   },
   "exclude": [
