--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "format": "npx prettier --write \"**/*.{js,jsx,json,ts,tsx}\""
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
     "native-base": "^3.4.9",
     "react": "18.0.0",
     "react-native": "0.69.2",
     "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
     "react-native-svg": "^12.4.1"
   },
   "devDependencies": {
