--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,7 +4,7 @@
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
 
-# For more details on how to configure your build environment visit
+# For more Profile on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
 # Specifies the JVM arguments used for the daemon process.
@@ -13,7 +13,7 @@
 org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
+# This option should only be used with decoupled projects. More Profile, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
