--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "format": "npx prettier --write \"**/*.{js,jsx,json,ts,tsx}\""
   },
   "dependencies": {
+    "@native-base/icons": "^0.0.11",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "native-base": "^3.4.9",
     "react": "18.0.0",
+    "react-hook-form": "^7.33.1",
     "react-native": "0.69.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^12.4.1"
+    "react-native-svg": "^12.4.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
