--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "semi": false,
   "jsxSingleQuote": true,
+  "semi": false,
   "singleQuote": true,
-  "trailingComma": "es5",
-  "tabWidth": 2
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
