--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^4.0.13",
+    "@testing-library/react-native": "^11.2.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^29.0.3",
     "@types/react-native": "^0.69.3",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
@@ -48,6 +50,7 @@
     "metro-react-native-babel-preset": "^0.70.3",
     "prettier": "2.7.1",
     "react-test-renderer": "18.0.0",
+    "ts-jest": "^29.0.2",
     "typescript": "^4.4.4"
   },
   "jest": {
@@ -59,6 +62,9 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
     ]
   }
 }
