--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format:check": "npx prettier --check \"**/*.{js,jsx,json,ts,tsx}\"",
     "format": "npx prettier --write \"**/*.{js,jsx,json,ts,tsx}\"",
     "storybook": "start-storybook -p 7007",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prestorybook": "rnstl"
   },
   "dependencies": {
     "@native-base/icons": "^0.0.11",
@@ -61,6 +62,7 @@
     "metro-react-native-babel-preset": "^0.70.3",
     "prettier": "2.7.1",
     "react-dom": "18.0.0",
+    "react-native-storybook-loader": "^2.0.5",
     "react-test-renderer": "18.0.0",
     "typescript": "^4.4.4"
   },
@@ -74,5 +76,14 @@
       "json",
       "node"
     ]
+  },
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./storybook"
+      ],
+      "pattern": "**/*.stories.tsx",
+      "outputFile": "./storybook/storyLoader.js"
+    }
   }
 }
