--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@storybook/addon-ondevice-actions": "^5.3.23",
     "@storybook/addon-ondevice-backgrounds": "^5.3.23",
     "@storybook/addon-ondevice-knobs": "^5.3.26",
+    "@storybook/addons": "^6.5.12",
     "@storybook/react-native": "^5.3.25",
     "@storybook/react-native-server": "^5.3.23",
     "@tsconfig/react-native": "^2.0.2",
