added storybook absolute path to config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "baseUrl": ".",
     "paths": {
       "@src/*": ["src/*"],
+      "@sb/*": ["storybook/*"],
       "@components": ["src/components"],
       "@screens": ["src/screens"],
       "@navigation": ["src/navigation"],
