--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.0.0",
     "react-hook-form": "^7.33.1",
     "react-native": "0.69.2",
+    "react-native-config": "^1.4.11",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
